--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -55,7 +58,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CommandesRepository\CommandeClientRepository.cs" />
     <Compile Include="Repository\CommandesRepository\CommandeRepository.cs" />
+    <Compile Include="Repository\CommandesRepository\ICommandeRepository.cs" />
     <Compile Include="Repository\CommandesRepository\LignesDeCommandeRepository\LigneDeCommandeRepository.cs" />
+    <Compile Include="Repository\RepertoireRepository\AdresseRepository.cs" />
     <Compile Include="Utils\EtablissementUtils\IShowroomRepository.cs" />
     <Compile Include="Repository\EtablissementRepository\ShowroomRepository.cs" />
     <Compile Include="Utils\IRepository.cs" />
@@ -76,6 +81,8 @@
   <ItemGroup>
     <Compile Include="Utils\ProductUtils\IProductCaracteristiqueRepository.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
